--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
